--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: "3"
 
+volumes:
+  dbvolume:
+
 services:
   db:
     image: postgres
@@ -7,6 +10,8 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+    volumes:
+      - dbvolume:/var/lib/postgresql/data
   web:
     build: ./docker/web
     command: python manage.py runserver 0.0.0.0:8000
